[build-system]
requires = ["setuptools >= 64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gftool"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
  {name = "Weh", email = "andreas.weh@physik.uni-augsburg.de"},
]
description="Collection of commonly used Green's functions and utilities"
readme = "README.rst"
keywords = ["Green's function", "physics"]
license = {file = "LICENSE.txt"}
classifiers=[
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering :: Physics',
]
dependencies = [
  'numpy>=1.17.0',
  'scipy>=1.6.0',
  'mpmath'
]

[project.optional-dependencies]
test = ['pytest>=4.6', 'hypothesis>=4.24.5']
fast = ['numexpr']

[project.urls]
ReadTheDocs = "https://gftools.readthedocs.io/"
Repository = "https://github.com/DerWeh/gftools"
Zenodo = "https://zenodo.org/doi/10.5281/zenodo.4744545"

[tool.pytest.ini_options]
minversion = "7"
testpaths = ["gftool/tests"]
log_cli_level = "INFO"
# xfail_strict = true
addopts = ["-ra", "--strict-config", "--strict-markers"]

[tool.setuptools]
packages = ["gftool"]

[tool.setuptools_scm]
version_file = "gftool/_version.py"

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "D",        # pydocstyle
  "DOC",      # pydoclint
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "FURB",     # refurb
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PERF",     # perlint
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "PYI",      # flake8-pyi
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "D105",     # ignore undocumented dunder methods like ``__str__`
]
allowed-confusables = ["ρ", "ν", "ℑ", "ℜ", "σ", "γ", "𝒪", "×"]

[tool.ruff.lint.per-file-ignores]
"gftool/tests/**" = ["T20"]
"gftool/tests/greenfunctions_test.py" = ["PT028"]
"gftool/tests/old_scipy_integrate.py" = ["ALL"]
"docs/source" = ["D100", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"  # legacy behaviour

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"  # legacy behaviour
